--- a/manifest.json
+++ b/manifest.json
@@ -1,13 +1,14 @@
 {
+  "name": "netlify",
+  "short_name": "netlify",
+  "start_url": "index.html",
   "background_color": "#ffffff",
   "description": "Esse é um app de aluguéis de repúblicas para pessoas universitárias.\nSimilar aos modelos de Quinto Andar e Loft, a empresa realiza reformas e prepara moradias para recepção de pessoas universitárias em um ambiente específico e otimizado para a vida de graduação.",
   "dir": "ltr",
   "display": "standalone",
-  "name": "netlify",
   "orientation": "any",
-  "scope": "/",
-  "short_name": "netlify",
-  "start_url": "index.html",
+  "scope": "index.html",
+  
   "theme_color": "#132235",
   "categories": [
     "business",
@@ -36,7 +37,8 @@
     {
       "src": "assets/img/icon/167.png",
       "sizes": "167x167",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     },
     {
       "src": "assets/img/icon/180.png",
@@ -44,8 +46,8 @@
       "type": "image/png"
     },
     {
-      "src": "assets/img/icon/192.png",
-      "sizes": "192x192",
+      "src": "assets/img/icon/196.png",
+      "sizes": "196x196",
       "type": "image/png"
     },
     {
